[package]
name = "miden-core"
version = "0.3.0"
description = "Miden VM core components"
authors = ["miden contributors"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/0xPolygonMiden/miden-vm"
categories = ["emulators", "no-std"]
keywords = ["instruction-set", "miden", "program"]
edition = "2021"
rust-version = "1.62"

[lib]
bench = false
doctest = false

[features]
default = ["std"]
std = ["math/std", "winter-utils/std", "crypto/std"]

[dependencies]
crypto = { package = "winter-crypto", path = "../../winterfell/crypto", default-features = false }
math = { package = "winter-math", path = "../../winterfell/math", default-features = false }
winter-utils = { package = "winter-utils", path = "../../winterfell/utils/core", default-features = false }
